--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,3 @@
 # Backend API URL (no trailing slash)
 # Default: http://localhost:5000
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5000/api/v1
