--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.5",
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot": "^0.0.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
+    "toast": "^0.5.4",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
